--- a/web-app/src/styles/ManageUsersPage.css
+++ b/web-app/src/styles/ManageUsersPage.css
@@ -1,6 +1,7 @@
 .manageusers-content {
     height: 100%;
     padding: 3% 15%;
+    transition: opacity 0.3s ease, filter 0.3s ease;
 }
 
 .muc-selection-headers ul {
@@ -29,15 +30,12 @@
 /* ------------------- */
 
 .muc-manageusers-table {
-    /* background-color: #cacaca; */
-
     font-family: 'Rubik', sans-serif;
     width: 100%;
 }
 
 .muc-manageusers-table thead {
     background-color: #d3d3d3;
-    
     text-align: left;
 }
 
@@ -45,15 +43,20 @@
     background-color: var(--basecolor);
 }
 
+.muc-manageusers-table th,
+.muc-manageusers-table td {
+    padding: 5px;
+    /* Added padding for table cells */
+    border-bottom: 1px solid #adadad;
+    /* Use border on cells */
+}
+
+
 .td-action {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 5px;
-}
-
-.table-tr {
-    border-bottom: 1px solid #adadad;
 }
 
 /* ----------------- */
@@ -72,11 +75,35 @@
 
 .action-li.close {
     padding: 20px;
+    color: #acacac;
+    text-decoration: none;
 }
 
+.action-li.dropdown {
+    color: var(--darkcolor);
+    transition: 0.2s ease-in;
+}
+
+.action-li.dropdown.retractable {
+    transform: rotate(-180deg);
+}
+
+.modal-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 990;
+    pointer-events: none;
+}
+
+.modal-container.active {
+    pointer-events: auto;
+}
 
 .modal-overlay {
-    position: fixed;
+    position: absolute; /* Position relative to .modal-container */
     top: 0;
     left: 0;
     width: 100%;
@@ -84,9 +111,10 @@
     opacity: 0;
     transition: opacity 0.3s ease;
     background-color: var(--darkcolor);
+    z-index: 1;
 }
 
-.modal-container .modal-overlay {
+.modal-overlay.active {
     opacity: 0.4;
 }
 
@@ -95,17 +123,19 @@
     top: 0;
     right: 0;
     width: 30%;
+    min-width: 300px;
     height: 100%;
     background-color: var(--basecolor);
     padding: 2%;
-
+    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.15);
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
-    z-index: 999;
+    z-index: 2;
 }
 
 .modal-content.show {
-    transform: translateX(0); /* Slide into view */
+    transform: translateX(0);
+    /* Slide into view */
 }
 
 .modal-content-header {
@@ -118,3 +148,14 @@
     color: #acacac;
     text-decoration: none;
 }
+
+
+/* ------------------------------- */
+/* conditional modal section start */
+/* ------------------------------- */
+
+
+
+/* ----------------------------- */
+/* conditional modal section end */
+/* ----------------------------- */
