--- a/web-app/src/styles/StatisticsPage.css
+++ b/web-app/src/styles/StatisticsPage.css
@@ -10,7 +10,19 @@
     height: 100%;
 }
 
+.statistics-bulk {
+    padding: 1.5%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+        "pie line view"
+}
+
+
 .stat-content {
+    
     height: 100%;
     display: flex;
     justify-content: center;
@@ -26,7 +38,7 @@
 }
 
 .stat-card {
-    background-color: white;
+    background-color: rgb(160, 75, 75);
     width: 90%;
     min-width: 600px;
     max-width: 95%;
@@ -53,16 +65,6 @@
 #pie {
     display: flex;
     justify-content: center;
-}
-
-
-.statistics-bulk {
-    height: 100%;
-    display: grid;
-    grid-template-rows: 100%;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas:
-        "pie line view"
 }
 
 .piesect {
