--- a/web-app/src/styles/eyeglass/EyeglassCataloguePage.css
+++ b/web-app/src/styles/eyeglass/EyeglassCataloguePage.css
@@ -76,7 +76,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    background-color: #8f8f8f;
+    background-color: #F5DDB3;
     border-radius: 18px;
 }
 
