--- a/web-app/src/styles/Layout.css
+++ b/web-app/src/styles/Layout.css
@@ -1,7 +1,17 @@
-/* layout affects everything, is more or less the "root" of the app here in css terms */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-/* place your base shits (e.g. bg color and what not) here, and add the fine details/specifications in the other styles (BIG ASSUMPTION) */
 
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
 
 #root {
     height: 100%;
@@ -9,4 +19,11 @@
 
 .page {
     height: calc(100vh - 154px);
+}
+
+h1,
+p {
+    line-height: 1.2;
+    margin-top: 0;
+    margin-bottom: 0;
 }
