added error redirect, logout button and new orders page

--- a/web-app/src/styles/StatisticsPage.css
+++ b/web-app/src/styles/StatisticsPage.css
@@ -38,7 +38,7 @@
 }
 
 .stat-card {
-    background-color: rgb(160, 75, 75);
+    background-color: white;
     width: 90%;
     min-width: 600px;
     max-width: 95%;
