--- a/web-app/src/styles/LoginPage.css
+++ b/web-app/src/styles/LoginPage.css
@@ -9,20 +9,14 @@
 
 .main-body {
     display: flex;
+    height: 100%;
 }
 
-@media screen and (min-width: 345px) {
-    .yellowbox {
-        display: none;
-    }
-}
 
 .yellowbox {
     background-color: #FFBD6E;
-    width: 100%;
-    min-width: 345px;
-    max-width: 45vmax;
-    height: calc(100vh - 154px);
+    flex: 0.8;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,7 +41,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: calc(100% - 45vmax);
+    height: 100%;
+    flex: 1;
     min-width: 415px;
 }
 
@@ -66,4 +61,48 @@
 
 .input-fields .submit-button {
     width: 100px;
+}
+
+.login-container {
+    max-width: 400px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .form-message-box {
+    margin-top: 2rem;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .form-error,
+  .form-success {
+    font-size: 0.95rem;
+    font-weight: 500;
+    border-radius: 6px;
+    padding: 0.75rem 1rem;
+    margin: 0.5rem auto;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  .form-error {
+    color: #842029;
+    background-color: #f8d7da;
+    border: 1px solid #f5c2c7;
+  }
+  
+  .form-success {
+    color: #0f5132;
+    background-color: #d1e7dd;
+    border: 1px solid #badbcc;
+  }
+  
+
+  @media screen and (max-width: 945px) {
+    .yellowbox {
+        display: none;
+    }
 }
