--- a/web-app/src/styles/LoginPage.css
+++ b/web-app/src/styles/LoginPage.css
@@ -12,6 +12,14 @@
     height: 100%;
 }
 
+.desktop-only {
+    display: inherit;
+}
+
+.mobile-only {
+    display: none;
+}
+
 
 .yellowbox {
     background-color: #FFBD6E;
@@ -28,13 +36,12 @@
     padding-right: 15%;
 }
 
-.yellowbox-text h1, p {
+.yellowbox-text h1,
+p {
     margin: 0;
     text-align: left;
     font-family: 'Red Rose', serif;
 }
-
-/* put logo in own div */
 
 .input-fields {
     display: flex;
@@ -61,7 +68,32 @@
 
 .input-fields .submit-button {
     width: 100px;
+    cursor: pointer;
 }
+
+
+
+.input-fields input,
+.input-fields button {
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 12px;
+    font-family: 'Rubik', sans-serif;
+    color: #2a383d;
+    background-color: #ffffff;
+    outline: none;
+    
+}
+
+#otp-verify, #otp-resend {
+    background-color: #ececec;
+}
+
+#otp-resend {
+    width: 175px;
+}
+
+
 
 .login-container {
     max-width: 400px;
@@ -69,16 +101,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .form-message-box {
+}
+
+.form-message-box {
     margin-top: 2rem;
-    width: 100%;
+    width: 330px;
     text-align: center;
-  }
-  
-  .form-error,
-  .form-success {
+}
+
+.form-error,
+.form-success {
     font-size: 0.95rem;
     font-weight: 500;
     border-radius: 6px;
@@ -86,23 +118,62 @@
     margin: 0.5rem auto;
     width: 100%;
     box-sizing: border-box;
-  }
-  
-  .form-error {
+}
+
+.form-error {
     color: #842029;
     background-color: #f8d7da;
     border: 1px solid #f5c2c7;
-  }
-  
-  .form-success {
+}
+
+.form-success {
     color: #0f5132;
     background-color: #d1e7dd;
     border: 1px solid #badbcc;
-  }
-  
+}
 
-  @media screen and (max-width: 945px) {
+@media screen and (max-width: 945px) {
+
     .yellowbox {
+        display: none !important;
+    }
+
+    .desktop-only {
         display: none;
+    }
+
+    .mobile-only {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding: 2rem;
+        text-align: center;
+    }
+
+    .mobile-only h1,
+    .mobile-only p {
+        font-family: 'Red Rose', serif;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .main-body {
+        flex-direction: column; 
+    }
+    
+    .mobile-only {
+        align-items: center;
+    }
+
+    .input-fields {
+        flex: 0.5;
+    }
+
+    .mobile-only h1,
+    .mobile-only p {
+        text-align: center;
     }
 }
