--- a/web-app/src/styles/eyeglass/AddEyeglassPage.css
+++ b/web-app/src/styles/eyeglass/AddEyeglassPage.css
@@ -102,8 +102,7 @@ label {
 }
 
 
-.aef-sect-fields textarea,
-input {
+.aef-sect-fields textarea, .aef-sect-fields input {
     padding: 1rem;
     border: 1px solid #e9e9e9;
     border-radius: 12px;
