dili ko na knows hahahaah joke lang - added styling changes to all major pages

--- a/web-app/src/styles/HomePage.css
+++ b/web-app/src/styles/HomePage.css
@@ -57,6 +57,11 @@
     height: 325px;
 }
 
+#productview {
+    width: 630px;
+    background-color: #ffebcd;
+}
+
 .quip {
     margin-top: 20px;
     display: flex;
