--- a/web-app/src/styles/StatisticsPage.css
+++ b/web-app/src/styles/StatisticsPage.css
@@ -6,6 +6,12 @@
     margin: 10px 0;
 }
 
+#stat-piechart {
+    width: 90%;
+    align-self: center;
+    background-color: transparent;
+}
+
 .statistics-content {
     height: 100%;
 }
@@ -14,6 +20,7 @@
     padding: 1.5%;
     height: 100%;
     display: grid;
+    gap: 8px;
     grid-template-rows: 100%;
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas:
@@ -65,6 +72,14 @@
 #pie {
     display: flex;
     justify-content: center;
+}
+
+.piesect,
+.linesect,
+.viewsect {
+    background-color: #f5f5f5;
+    border: 1px solid #c2c2c2;
+    border-radius: 10px;
 }
 
 .piesect {
