--- a/web-app/src/styles/eyeglass/EyeglassPage.css
+++ b/web-app/src/styles/eyeglass/EyeglassPage.css
@@ -10,6 +10,7 @@
 
 .eec-back-btn {
     margin: 20px 85px;
+    margin-top: 0;
 }
 
 .edit-eyeglass-bulk {
@@ -175,6 +176,7 @@
     border: 1px solid #858585;
     border-radius: 3px;
     padding: 20px 90px;
+    padding-left: 10px;
     text-align: start;
 }
 
